--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,15 @@ body {
   box-sizing: border-box;
 }
 
+a { 
+  text-decoration: none; 
+}
+
+*:focus, *:hover, *:visited, *:link, *:active {
+  text-decoration: none;
+  color: #606060;
+}
+
 .youtube__icon {
   width: 80px;
   cursor: pointer;
@@ -101,6 +110,10 @@ body {
   padding-top: 1rem;
 }
 
+.main__video .sidebar {
+ display: none;
+}
+
 .sidebar__item {
   display: flex;
   flex-direction: row;
@@ -144,7 +157,7 @@ body {
 }
 
 .sidebar__item.selected {
-  background-color: #ccc;
+  background-color: #e9e9e9;
 }
 
 .sidebar__item.selected > .sidebar__title {
@@ -158,4 +171,271 @@ body {
 /* VIDEO CONTAINER */
 .videos {
   flex: .85;
+  background-color: #f9f9f9;
+}
+
+.videos__border {
+  background-color: #ccc;
+  width: 100%;
+  height: .05rem;
+  margin: 12px 0;
+}
+
+.video__item {
+  cursor: pointer;
+}
+
+/* SEARCH VIDEOS */
+.search__videos {
+  padding: .2rem 5rem;
+}
+
+.search__videos .video__item {
+  padding: 1.2rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.search__videos .video__info {
+  padding: 0 1.2rem;
+  margin-right: 5rem;
+}
+
+.search__videos .video__container img {
+  width: 360px;
+  height: 202px;
+}
+
+.search__videos .video__item h2 {
+  font-size: 1.6rem;
+  font-weight: 400;
+  padding-bottom: .4rem;
+}
+
+.search__videos .video__publish, .search__videos .video__channel, .search__videos .video__description {
+  font-size: 1.3rem;
+  line-height: 1;
+  color: #606060;
+}
+
+.search__videos .video__channel, .search__videos .video__description {
+  padding-top: 1.3rem;
+}
+
+/* SUGGESTED VIDEOS */
+.suggest__videos {
+  padding: 2rem .5rem;
+}
+
+.suggested__videos .video__item h2 {
+  font-size: 1.4rem;
+  line-height: 1;
+  font-weight: 500;
+  padding: 1rem 0;
+}
+
+.videos .suggested__header {
+  margin: 0 2rem;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.suggested__videos .video__publish, .suggested__videos .video__channel {
+  font-size: 1.4rem;
+  line-height: 1;
+  color: #606060;
+  padding: .2rem 0;
+}
+
+.suggested__videos .video__info {
+  width: 250px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.suggest__avatar {
+  padding: .8rem 1rem 0 0;
+}
+
+.suggested__videos  {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.suggested__videos .video__item {
+  margin-bottom: 4rem;
+}
+
+.suggested__videos .video__item img {
+  width: 277px;
+  height: 158px;
+}
+
+/* VIDEO PLAYER */
+
+.video__player {
+  display: grid;
+  grid-template-rows: 100%;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 0 10rem;
+  grid-column-gap: 2rem;
+}
+
+.player__container {
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+  justify-self: end;
+}
+
+.player__info {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  justify-self: start;
+}
+
+.player__info img {
+  width: 50px;
+  height: 50px;
+}
+
+
+.player__recommend {
+  flex: .15;
+}
+
+.player__recommend .suggest__avatar {
+  display: none;
+}
+
+.player__frame iframe  {
+  width: 900px;
+  height: 500px;
+  padding-top: 1.5rem;
+}
+
+.video__avatar {
+  display: none;
+}
+
+.video__player .video__item {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.video__player .video__container img {
+  height: 95px;
+  width: 170px;
+  padding-top: 1rem;
+}
+
+.video__player .suggested__videos .video__item {
+  margin-bottom: .5rem;
+}
+
+.video__player .video__info {
+  width: 220px;
+  padding-left: .8rem;
+}
+
+.video__player .video__info p {
+  font-size: 1.3rem;
+}
+
+.video__player .video__info h2 {
+  color: #030303;
+}
+
+.video__player .videos__border {
+  width: 80%;
+  height: .07rem;
+}
+
+.player__info--stats {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  color: #606060;
+}
+
+.player__info--right {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.player__icons {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  padding: .5rem 0 .5rem 2.5rem;
+  cursor: pointer;
+}
+
+.player__icon {
+  color: #606060;
+}
+
+.player__title {
+  padding: 0 .5rem;
+  font-size: 1.4rem;
+  font-weight: 400;
+}
+
+.player__info h2 {
+  font-size: 1.6rem;
+  font-weight: 400;
+  color: #030303;
+  padding: 1.5rem 0;
+}
+
+.player__info--left {
+  font-size: 1.4rem;
+  font-weight: 400;
+}
+
+.player__border {
+  width: 100%;
+  background-color: #e9e9e9;
+  height: .1rem;
+}
+
+.player__info--channel {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  margin-right: 30%;
+}
+
+.player__info--avatar {
+  padding-right: 1.6rem;
+  padding-top: 2rem;
+}
+
+
+.channel__name {
+  color: #030303;
+  font-size: 1.4rem;
+  font-weight: 500;
+  padding-top: 2rem;
+}
+
+.channel__subs {
+  color: #606060;
+  padding: .2rem 0;
+  font-size: 1.3rem;
+}
+
+.player__description {
+  padding: 2rem 0;
+  font-size: 1.4rem;
 }
