--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,20 @@
     box-sizing: inherit;
 }
 
+*::-webkit-scrollbar {
+  width: 18px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #999999;
+  border-radius: 15px;
+  border: 5px solid #fff;
+}
+
 html {
   font-size: 62.5%;
   font-family: 'Roboto', sans-serif;
@@ -106,7 +120,7 @@ a {
 
 /* SIDEBAR */
 .sidebar.active {
-  flex: .15;
+  flex: .18;
   padding-top: 1rem;
 }
 
@@ -119,7 +133,7 @@ a {
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: center;
-  padding: .5rem 0 .5rem 2.5rem;
+  padding: .2rem 0 .5rem 2.5rem;
   cursor: pointer;
 }
 
@@ -174,7 +188,7 @@ a {
 }
 
 .videos.active {
-  flex: .85;
+  flex: .82;
 }
 
 .videos.active {
@@ -284,7 +298,7 @@ a {
 
 /* VIDEO PLAYER */
 .sidebar__container .header__navigation {
-  padding: 1.8rem 0 0 2rem;
+  padding: 1.4rem 0 0 1.6rem;
 }
 
 .sidebar__container.active {
